# 2025-CGS-ESP32-IoT

./: .gitignore  README.md
Firmware/: README.md  tuto_ESP.txt
Firmware/Django_dir/: .commands.txt.swp  commands.txt
Firmware/Django_dir/djangotutorial/: db.sqlite3
Firmware/PCB_Affichage_GoogleCalendar_et_BarLED/: CMakeLists.txt
Firmware/PCB_Affichage_GoogleCalendar_et_BarLED/main/: CMakeLists.txt  PCB_Affichage_GoogleCalendar_et_BarLED.c
Firmware/PCB_Affichage_Google_Calendar/: README.md  sdkconfig  sdkconfig.old
Firmware/PCB_Affichage_Google_Calendar/main/: CMakeLists.txt  Google_Calendar.c
Firmware/code_ESP_commande_par_le_site/: CMakeLists.txt  sdkconfig
Firmware/code_ESP_commande_par_le_site/main/: CMakeLists.txt  code_ESP_commande_par_le_site.c  idf_component.yml
Hardware/: .~lock.composants.ods#  Appareils_Covent.ods  README.md  composants.ods
Hardware/Connecteur_ruban/: dessin_logo.kicad_mod
Hardware/PCB_Affichage/: PCB_Affichage.kicad_pcb  PCB_Affichage.kicad_pro  PCB_Affichage.kicad_sch  PCB_Affichage.step  README.md
Hardware/PCB_Rack/: #auto_saved_files#  PCB_Rack.kicad_pcb  PCB_Rack.kicad_prl  PCB_Rack.kicad_pro  PCB_Rack.kicad_sch  README.md  Relais.kicad_sch  Relais2.kicad_sch  Relais3.kicad_sch  Relais4.kicad_sch  Relais5.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table  ~PCB_Rack.kicad_sch.lck
Hardware/PCB_Repetition/: DIP_Switch.kicad_sym  PCB_Repetition.kicad_pcb  PCB_Repetition.kicad_pro  PCB_Repetition.kicad_sch  Relais.kicad_sch  XLR.kicad_sch  XLR2.kicad_sch  fp-lib-table  sym-lib-table
(+221 files in other folders)
